--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body id="bd">
 <h1> color flicker </h1>
 <div class="ak">background color: <span id="cid"> </span> </div>
-<center><button class="btn1"> click me </button>
+<center><button id="btn1"> click me </button>
 </center>
 </body>
 </html>
