--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 </head>
 <body id="bd">
-<h1> color flicker </h1>
-<div class="ak">background color: <span id="cid"> </span> </div>
+<h4> color flipper </h4>
+<div class="ak">background color: <span id="cid"> red</span> </div>
 <center><button id="btn1"> click me </button>
 </center>
 </body>
